--- a/index.html
+++ b/index.html
@@ -7,10 +7,65 @@
 <body>
 
         <div class="container">
-                <div class="page-header">
-                    <h1 id="timeline">Bootstrap Timeline</h1>
-                      <p></p>
-                </div>
+                <nav class="navbar navbar-default">
+                        <div class="container-fluid">
+                          <!-- Brand and toggle get grouped for better mobile display -->
+                          <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                              <span class="sr-only"></span>
+                              <span class="icon-bar"></span>
+                              <span class="icon-bar"></span>
+                              <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="#">FOSS COMMUNITY KAVRE</a>
+                          </div>
+                      
+                          <!-- Collect the nav links, forms, and other content for toggling -->
+                          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+                              <li class="active"><a href="#">Team <span class="sr-only">(current)</span></a></li>
+                              <li><a href="projects.html">Projects</a></li>
+                              <li><a href="events.html">Events</a></li>
+                              <!-- <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                  <li><a href="#">Action</a></li>
+                                  <li><a href="#">Another action</a></li>
+                                  <li><a href="#">Something else here</a></li>
+                                  <li role="separator" class="divider"></li>
+                                  <li><a href="#">Separated link</a></li>
+                                  <li role="separator" class="divider"></li>
+                                  <li><a href="#">One more separated link</a></li>
+                                </ul>
+                              </li> -->
+                            </ul>
+                            <!-- <form class="navbar-form navbar-left">
+                              <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search">
+                              </div>
+                              <button type="submit" class="btn btn-default">Submit</button>
+                            </form> -->
+                            <ul class="nav navbar-nav navbar-right">
+                              <li><a href="#">Gallery</a></li>
+                              <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Archive <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">SFD2020</a></li>
+                                  <li><a href="#">SFD2019</a></li>
+                                  <li><a href="#">SFD2018</a></li>
+                                  <li><a href="#">SFD2017</a></li>
+                                  <li><a href="#">SFD2016</a></li>
+                                  <li><a href="#">SFD2015</a></li>
+                                  <li role="separator" class="divider"></li>
+                                  <li><a href="#">Separated link</a></li>
+                                </ul>
+                              </li>
+                            </ul>
+                          </div><!-- /.navbar-collapse -->
+                        </div><!-- /.container-fluid -->
+                      </nav>
+
+                
                 <ul class="timeline">
                     <li>
                       <div class="timeline-badge info"><i class="glyphicon glyphicon-hand-left" style="margin-top:15px;"></i></div>
