--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                           <!-- Collect the nav links, forms, and other content for toggling -->
                           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
-                              <li class="active"><a href="#">Team <span class="sr-only">(current)</span></a></li>
+                              <li class="active"><a href="events.html">Events <span class="sr-only">(current)</span></a></li>
                               <li><a href="projects.html">Projects</a></li>
-                              <li><a href="events.html">Events</a></li>
+                              <li><a href="teams.html">Teams</a></li>
                               <!-- <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
