--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
                               <li class="active"><a href="events.html">Events <span class="sr-only">(current)</span></a></li>
-                              <li><a href="projects.html">Projects</a></li>
-                              <li><a href="teams.html">Teams</a></li>
+                              <li><a href="project.html">Projects</a></li>
+                              <li><a href="team.html">Team</a></li>
+                              <li><a href="training.html">Trainings</a></li>
                               <!-- <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
@@ -71,28 +72,56 @@
                       <div class="timeline-badge info"><i class="glyphicon glyphicon-hand-left" style="margin-top:15px;"></i></div>
                       <div class="timeline-panel">
                         <div class="timeline-heading">
-                          <h4 class="timeline-title">Bootstrap released</h4>
-                          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> August 2011</small></p>
+                          <h2 class="timeline-title">FOSS COMMUNITY KAVRE IS BORN TODAY</h2>
+                          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> September 16, 2017</small></p>
                         </div>
                         <div class="timeline-body">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
-                          Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
-                          dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. 
-                          Aliquam in felis sit amet augue.</p>
+                          <p>Free and Open Source Software Community Kavre is one out of thousands Open Source Community which works on sharing Open Source Pholosophy. We are a group of Open Source Enthusiast from Kavre who want to spread Open Knowledge to the Community.</p>
                         </div>
                       </div>
                     </li>
                     <li class="timeline-inverted">
+                        <div class="timeline-badge default"><i class="glyphicon glyphicon-home"style="margin-top:15px;"></i></div>
+                        <div class="timeline-panel">
+                          <div class="timeline-heading">
+                            <h2 class="timeline-title">Where can you find us?</h2>
+                          </div>
+                          <div class="timeline-body">
+                            <p>GitHub will be our Last Resort:
+                              <a href="https://github.com/fosskavre/"><h2>github.com/fosskavre</h2>
+                                <img src="github-logo.jpg" alt="FOSS KAVRE" style="margin-left:400px;border-radius:10px;position:fixed;align:right;width:150px;height:150px;">
+                              </a>We do our Project Management here at <a href="https://waffle.io/FOSSKavre?tab=projects"><h2>Waffle.io</h2></a><br> And you can always ping any volunters anytime so that we can be there for you.
+                            </p>
+                          </div>
+                        </div>
+                      </li>
+                    <li class="timeline-inverted">
                       <div class="timeline-badge warning"><i class="glyphicon glyphicon-chevron-right" style="margin-top:15px;"></i></div>
                       <div class="timeline-panel">
                         <div class="timeline-heading">
-                          <h4 class="timeline-title">Bootstrap 2</h4>
+                          <h2 class="timeline-title">OUR OBJECTIVES:</h2>
                         </div>
                         <div class="timeline-body">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
-                          Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
-                          dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. 
-                          Aliquam in felis sit amet augue.</p>
+                            <ul>
+                            <li>
+                              Provide Trainings, Workshops and Tutorials.
+                            </li>
+                            <li>
+                              Interact with new People, Participate in Events organized by other Communities, help solve problems, Bring Openness among Volunteers.
+                            </li>
+                            <li>
+                              Organize MeetUps, Open Source Conference, Linux Talks 
+                            </li>
+                            <li>
+                              Make Massive Use of Open Source Technologies in every possible areas of Kavre (Health, Education, Business, Governmental Organizations)
+                            </li>
+                            <li>
+                              Publish Magazine, Blogs Articles about Open Source Technologies to make the citizens aware about FOSS and its impact in community. 
+                            </li>
+                            <li>
+                              Explore resources to make the Community Sustain economically in a long run.
+                            </li>
+                          </ul>
                         </div>
                       </div>
                     </li>
@@ -108,17 +137,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="timeline-inverted">
-                      <div class="timeline-badge default"><i class="glyphicon glyphicon-home"style="margin-top:15px;"></i></div>
-                      <div class="timeline-panel">
-                        <div class="timeline-heading">
-                          <h4 class="timeline-title">Right Event</h4>
-                        </div>
-                        <div class="timeline-body">
-                          <p>Add more progress events and milestones to the left or right side of the timeline. Each event can be tagged with a date and given a beautiful icon to symbolize it's spectacular meaning.</p>
-                        </div>
-                      </div>
-                    </li>
+                    
                     <li>
                       <div class="timeline-badge default"><i class="glyphicon glyphicon-home"style="margin-top:15px;"></i></div>
                       <div class="timeline-panel">
