Event timeline all set for SFD Presentation

--- a/index.html
+++ b/index.html
@@ -81,21 +81,6 @@
                       </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-badge default"><i class="glyphicon glyphicon-home"style="margin-top:15px;"></i></div>
-                        <div class="timeline-panel">
-                          <div class="timeline-heading">
-                            <h2 class="timeline-title">Where can you find us?</h2>
-                          </div>
-                          <div class="timeline-body">
-                            <p>GitHub will be our Last Resort:
-                              <a href="https://github.com/fosskavre/"><h2>github.com/fosskavre</h2>
-                                <img src="github-logo.jpg" alt="FOSS KAVRE" style="margin-left:400px;border-radius:10px;position:fixed;align:right;width:150px;height:150px;">
-                              </a>We do our Project Management here at <a href="https://waffle.io/FOSSKavre?tab=projects"><h2>Waffle.io</h2></a><br> And you can always ping any volunters anytime so that we can be there for you.
-                            </p>
-                          </div>
-                        </div>
-                      </li>
-                    <li class="timeline-inverted">
                       <div class="timeline-badge warning"><i class="glyphicon glyphicon-chevron-right" style="margin-top:15px;"></i></div>
                       <div class="timeline-panel">
                         <div class="timeline-heading">
@@ -125,52 +110,67 @@
                         </div>
                       </div>
                     </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-badge default"><i class="glyphicon glyphicon-home"style="margin-top:15px;"></i></div>
+                        <div class="timeline-panel">
+                          <div class="timeline-heading">
+                            <h2 class="timeline-title">Where can you find us?</h2>
+                          </div>
+                          <div class="timeline-body">
+                            <p>GitHub will be our Last Resort:
+                              <a href="https://github.com/fosskavre/"><h2>github.com/fosskavre</h2>
+                                <img src="github-logo.jpg" alt="FOSS KAVRE" style="margin-left:400px;border-radius:10px;position:fixed;align:right;width:150px;height:150px;">
+                              </a>We do our Project Management here at <a href="https://waffle.io/FOSSKavre?tab=projects"><h2>Waffle.io</h2></a> And you can always ping any volunters anytime so that we can be there for you. <br> <p>We haven't started yet, but there are a couple of Projects in the repo which we will work as a team.</p>
+                            </p>
+                          </div>
+                        </div>
+                      </li>
                     <li>
                       <div class="timeline-badge danger"><i class="glyphicon glyphicon-eye-open" style="margin-top:15px;"></i></div>
                       <div class="timeline-panel">
                         <div class="timeline-heading">
-                          <h4 class="timeline-title">Left Event</h4>
-                          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3 years ago</small></p>
+                          <h2 class="timeline-title">Projects</h2>
                         </div>
                         <div class="timeline-body">
-                          <p>Add more progress events and milestones to the left or right side of the timeline. Each event can be tagged with a date and given a beautiful icon to symbolize it's spectacular meaning.</p>
+                          <ul>
+                            <li>
+                              <a href="https://github.com/FOSSKavre/ReWrite"><b>ReWrite</b></a><p>A running websapplication for Conducting Conferences build using Angular2Framework. This can be helpful while explorig your semester projects ideas and tools.</p>
+                            </li>
+                            <li>
+                              <a href="https://github.com/FOSSKavre/medical-data-insight">Medical Data Insight</a><p> Semester Project "Nepal Medical Data Visualization" supervised by Dr. Rabindra Bista now known as Medical Data Visualization is an ongoing project which aims to develop a Full Framework/Platform for Adding Medical records and also built insight from the data.</p>
+                            </li>
+                          </ul>
                         </div>
                       </div>
                     </li>
-                    
-                    <li>
+                    <li class="timeline-inverted">
                       <div class="timeline-badge default"><i class="glyphicon glyphicon-home"style="margin-top:15px;"></i></div>
                       <div class="timeline-panel">
                         <div class="timeline-heading">
-                          <h4 class="timeline-title">Left Event</h4>
+                          <h2 class="timeline-title">Trainings</h2>
                         </div>
                         <div class="timeline-body">
-                          <p>Add more progress events and milestones to the left or right side of the timeline. Each event can be tagged with a date and given a beautiful icon to symbolize it's spectacular meaning.</p>
-                        
-                          <hr>
-                          <div class="btn-group">
-                            <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-                              <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                              <li><a href="#">Action</a></li>
-                              <li><a href="#">Another action</a></li>
-                              <li><a href="#">Something else here</a></li>
-                              <li class="divider"></li>
-                              <li><a href="#">Separated link</a></li>
-                            </ul>
-                          </div>
+                          <ul>
+                            <li>
+                                <h4>How to build statig GitHub Pages?</h4>
+                            </li>
+                            <li>
+                              <h4>Software Developemnt and Project Development with Github</h4>
+                            </li>
+                          </ul>
                         </div>
-                      </div>
-                    </li>
+                    <li>
+
                     <li>
                        <div class="timeline-badge default"><i class="glyphicon glyphicon-arrow-left" style="margin-top:15px;"></i></div>
                       <div class="timeline-panel">
                         <div class="timeline-heading">
-                          <h4 class="timeline-title">Left Event</h4>
+                          <h2 class="timeline-title">FOSS KAVRE and KUOSC</h2>
                         </div>
                         <div class="timeline-body">
-                          <p>Add more progress events and milestones to the left or right side of the timeline. Each event can be tagged with a date and given a beautiful icon to symbolize it's spectacular meaning.</p>
+                          <p>As both communities belong from same place, FOSS KAVRE and KUOSC will support eachother in conducting events.</p>
+                          <p>FOSS KAVRE will seek technical expertise from KUOSC for workshops</p>
+                          <p>KUOSC will seek new areas to spread open source activities in the local community with the help of FOSS KAVRE</p>
                         </div>
                       </div>
                     </li>
@@ -178,10 +178,11 @@
                       <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up" style="margin-top:15px;"></i></div>
                       <div class="timeline-panel">
                         <div class="timeline-heading">
-                          <h4 class="timeline-title">Oldest event</h4>
+                          <h4 class="timeline-title">What's Next</h4>
                         </div>
                         <div class="timeline-body">
-                          <p>Add more progress events and milestones to the left or right side of the timeline. Each event can be tagged with a date and given a beautiful icon to symbolize it's spectacular meaning.</p>
+                          <p>More Trainings and workshops to fulfill the Objectives as well as make an impact in the community at the same time.</p>
+                          <p>Fill more boxes below with events that we will conduct soon.</p></p>
                         </div>
                       </div>
                     </li>
